--- a/.github/workflows/connect_db-math.yml
+++ b/.github/workflows/connect_db-math.yml
@@ -1,45 +1,35 @@
-# This is a basic workflow that is manually triggered
- 
 name: Teste MySQL na db-math
- 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+
 on:
   workflow_dispatch:
-    # Inputs the workflow accepts.
     inputs:
       name:
-        # Friendly description to be shown in the UI instead of 'name'
         description: 'Servidor a testar'
-        # Default value if no value is explicitly provided
-        default: '---'
-        # Input has to be provided for the workflow to run
+        default: 'db-math.mysql.database.azure.com'
         required: true
-        # The data type of the input
         type: string
- 
       query:
-        # Friendly description to be shown in the UI instead of 'name'
         description: 'Query a testar'
-        # Default value if no value is explicitly provided
         default: 'create.sql'
-        # Input has to be provided for the workflow to run
         required: true
-        # The data type of the input
         type: string
- 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  test-mysql:
     runs-on: ubuntu-latest
- 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+
     steps:
-    # Runs a single command using the runners shell
     - uses: actions/checkout@v4
-    - name: check folder
+
+    - name: Verificar arquivos
       run: ls -l
-    - name: Send greeting
-      run: mysql -h ${{ github.event.inputs.name }} -u ${{ secrets.USER }} -p ${{ secrets.PASS }}
+
+    - name: Executar query no MySQL
+      run: |
+        mysql -h ${{ github.event.inputs.name }} \
+              -u${{ secrets.USER }} \
+              -p${{ secrets.PASS }} \
+              --ssl-mode=REQUIRED \
+              --connect-timeout=10 \
+              --verbose \
+              < ${{ github.event.inputs.query }}
