--- a/.github/workflows/connect_db-math.yml
+++ b/.github/workflows/connect_db-math.yml
@@ -4,12 +4,12 @@ on:
   workflow_dispatch:
     inputs:
       name:
-        description: 'Servidor a testar'
+        description: 'Servidor MySQL (host)'
         default: 'db-math.mysql.database.azure.com'
         required: true
         type: string
       query:
-        description: 'Query a testar'
+        description: 'Arquivo SQL a executar'
         default: 'create.sql'
         required: true
         type: string
@@ -19,7 +19,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout do repositório
+      uses: actions/checkout@v4
 
     - name: Verificar arquivos
       run: ls -l
@@ -30,6 +31,4 @@ jobs:
               -u${{ secrets.USER }} \
               -p${{ secrets.PASS }} \
               --ssl-mode=REQUIRED \
-              --connect-timeout=10 \
-              --verbose \
               < ${{ github.event.inputs.query }}
