--- a/.github/workflows/connect_db-math.yml
+++ b/.github/workflows/connect_db-math.yml
@@ -31,4 +31,4 @@ jobs:
               -u${{ secrets.USER }} \
               -p${{ secrets.PASS }} \
               --ssl-mode=REQUIRED \
-              < ${{ github.event.inputs.query }}
+              db-math < ${{ github.event.inputs.query }}
