--- a/.github/workflows/connect_db-math.yml
+++ b/.github/workflows/connect_db-math.yml
@@ -4,13 +4,13 @@ on:
   workflow_dispatch:
     inputs:
       name:
-        description: 'Servidor a testar'
+        description: 'Servidor MySQL (host)'
         default: 'db-math.mysql.database.azure.com'
         required: true
         type: string
 
       query:
-        description: 'Query a testar'
+        description: 'Arquivo SQL a executar'
         default: 'create.sql'
         required: true
         type: string
@@ -18,17 +18,19 @@ on:
 jobs:
   greet:
     runs-on: ubuntu-latest
+    environment: database-test
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout do repositório
+      uses: actions/checkout@v4
 
-    - name: Verificar arquivos
+    - name: Verificar arquivos no repositório
       run: ls -l
 
     - name: Executar query no MySQL
       run: |
         mysql -h ${{ github.event.inputs.name }} \
-              -ugestor@db-math \
-              -pAbcd123! \
+              -u${{ secrets.USER }} \
+              -p${{ secrets.PASS }} \
               --ssl-mode=REQUIRED \
               db-math < ${{ github.event.inputs.query }}
